--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -143,6 +143,25 @@ return (
 
 ### Nested Elements
 
+#### CTA (Call To Action) ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
+
+<TokenTable>
+  <TokenRow token="--fs-region-bar-cta-margin-left" value="auto" />
+  <TokenRow token="--fs-region-bar-cta-text-decoration" value="underline" />
+</TokenTable>
+
+#### Message ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
+
+<TokenTable>
+  <TokenRow token="--fs-region-bar-message-margin-right" value="auto" />
+</TokenTable>
+
+#### Postal Code ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
+
+<TokenTable>
+  <TokenRow token="--fs-region-bar-postal-code-margin-right" value="auto" />
+</TokenTable>
+
 #### Icon
 
 <TokenTable>
@@ -162,6 +181,12 @@ return (
 For further customization, you can use the following data attributes:
 
 `data-fs-region-bar`
+
+`data-fs-region-bar-postal-code`
+
+`data-fs-region-bar-cta`
+
+`data-fs-region-bar-message`
 
 `data-fs-region-bar-filter`
 
