--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -143,7 +143,7 @@ return (
 
 ### Nested Elements
 
-#### CTA (Call To Action) ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
+#### CTA (Call to Action) ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
 
 <TokenTable>
   <TokenRow token="--fs-region-bar-cta-margin-left" value="auto" />
