Apply suggestions from code review
Co-authored-by: Mariana Caetano Pereira <67270558+mariana-caetano@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -2,9 +2,9 @@
 title: "Delivery Promise components"
 ---
 
-This guide outlines the main components related to the Delivery Promise feature for FastStore. It details the structure of these elements and emphasizes the customizations required when altering standard sections, such as `NavBar` and `ProductGallery`.
+This guide explains the components of the [Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview) feature for FastStore. It describes the structure of these parts and highlights the customizations needed when modifying standard sections like `NavBar` and `ProductGallery`. 
 
-You'll understand which components are reusable and which need to be customized, illustrating the connection between native implementation and customizations.
+You'll learn which components can be reused and which require customization, illustrating the connection between native implementation and customization.
 
 ## Components
 
@@ -14,9 +14,11 @@ Below are the core components related to the Delivery Promise feature in FastSto
 
 ### RegionButton
 
-`RegionButton` is a desktop-only component integrated into the `NavBar` section, under the Global Sections content type in the Headless CMS.
+`RegionButton` is a desktop-only component integrated into the `NavBar` section, under the [Global Sections content type](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview#content-types) in the Headless CMS.
 
-Its behavior is context-dependent, meaning if a shopper doesn't add a postal code, a `Popover` is displayed and the button label adjusts based on whether a default postal code is present. If a postal code is added, the button shows the location and suppresses the `Popover`. Additionally, when a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
+Its behavior is context-dependent, meaning if a shopper doesn't add a postal code, a `Popover` is displayed, and the button label adjusts based on whether a default postal code is present. If a postal code is added, the button shows the location and suppresses the `Popover`. Additionally, when a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
+
+![RegionButton](https://vtexhelp.vtexassets.com/assets/docs/src/region-button___ccb03f5e9e36d837a4b03aae6a0a58ff.png)
 
 When customizing the `NavBar` section, you must also customize `RegionButton`.
 
@@ -25,7 +27,6 @@ This component leverages the following:
 * **UI Components:** [`Button`](https://developers.vtex.com/docs/guides/faststore/atoms-button)  and [`Icon`](https://developers.vtex.com/docs/guides/faststore/atoms-icon).
 * **Hooks:** `useSession`
 
-![RegionButton](https://vtexhelp.vtexassets.com/assets/docs/src/region-button___ccb03f5e9e36d837a4b03aae6a0a58ff.png)
 
 ### RegionModal
 
@@ -38,13 +39,14 @@ This component leverages the following:
 * **UI Components:** [`RegionModal`](https://developers.vtex.com/docs/guides/faststore/organisms-region-modal)
 * **Hooks:** `useRegion`
 
-![RegionModal](https://vtexhelp.vtexassets.com/assets/docs/src/region-modal___6352f280eeb8eb77ee4674a5caf4f328.png)
 
 ### RegionBar
 
 `RegionBar` is a mobile-only component that acts as a section under the Global Sections content type in the Headless CMS.
 
-Its behavior is context-dependent, meaning if a shopper doesn't add a postal code, a `Popover` is displayed and the button label adjusts based on whether a default postal code is present. If a postal code is added, the button shows the location and suppresses the `Popover`. Additionally, when a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
+Its behavior is context-dependent, meaning if a shopper doesn't add a postal code, a `Popover` is displayed, and the button label adjusts based on whether a default postal code is present. If a postal code is added, the button shows the location and suppresses the `Popover`. Additionally, when a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
+
+![RegionBar](https://vtexhelp.vtexassets.com/assets/docs/src/region-bar___ef5221d500b05778f136a540a35253bd.png)
 
 Even if the `NavBar` is customized, you can use the native `RegionBar`.
 
@@ -53,7 +55,6 @@ This component leverages the following:
 * **UI Components**: [`RegionBar`](https://developers.vtex.com/docs/guides/faststore/molecules-region-bar)
 * **Hooks:** `useSession`
 
-![RegionBar](https://vtexhelp.vtexassets.com/assets/docs/src/region-bar___ef5221d500b05778f136a540a35253bd.png)
 
 ### RegionPopover
 
@@ -61,12 +62,14 @@ This component leverages the following:
 
 When customizing the `RegionBar` or `RegionButton` components, you must also customize `RegionPopover`.
 
+![RegionPopover](https://vtexhelp.vtexassets.com/assets/docs/src/regionpopover___dedb0aad756657e71d4c8d40cb2ef5e7.png)
+
+
 This component leverages the following:
 
 * **UI Components**: [`Icon`](https://developers.vtex.com/docs/guides/faststore/atoms-icon), [`InputField`](https://developers.vtex.com/docs/guides/faststore/molecules-input-field), [`Link`](https://developers.vtex.com/docs/guides/faststore/atoms-link), and [`Popover`](https://developers.vtex.com/docs/guides/faststore/molecules-popover).
 * **Hooks:** `useSession`, `useRegion`
 
-![RegionPopover](https://vtexhelp.vtexassets.com/assets/docs/src/regionpopover___dedb0aad756657e71d4c8d40cb2ef5e7.png)
 
 ### RegionSlider
 
@@ -79,15 +82,15 @@ This component leverages the following:
 
 It includes three interaction types: Setting a new location (no postal code set), changing an existing location (postal code set), and selecting a pickup point (pickup point filter) for more precise delivery options.
 
-* **No postal code set:** User clicks the "Set location" button, then the `RegionSlider` appears to set a postal code.
+* **No postal code set:** The user clicks the "Set location" button, then the `RegionSlider` appears to set a postal code.
 
 ![setLocation](https://vtexhelp.vtexassets.com/assets/docs/src/set-location___c737fdd322b9233809e4f876f1feeb41.png)
 
-* **Postal code set:** User clicks the postal code link, then the `RegionSlider` appears to change location.
+* **Postal code set:** The user clicks the postal code link, then the `RegionSlider` appears to change location.
 
 ![changeLocation](https://vtexhelp.vtexassets.com/assets/docs/src/change-location___4f3e2a93c0aec741af90968b84779aa1.png)
 
-* **Pickup point filter:** User applies or clears filters related to pickup points. When filters are cleared, the `RegionSlider` resets its state and removes selected pickup points without closing the component.
+* **Pickup point filter:** The user applies or clears filters related to pickup points. When filters are cleared, the `RegionSlider` resets its state and removes selected pickup points without closing the component.
 
 ![changePickupPoint](https://vtexhelp.vtexassets.com/assets/docs/src/change-pickup-point___458c47c2a06d40385e47058bcbfeaac2.png)
 
