update(components.mdx): adding callout

--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -6,6 +6,8 @@ This guide explains the components of the [Delivery Promise](https://developers.
 
 You'll learn which components can be reused and which require customization, illustrating the connection between native implementation and customization.
 
+>ℹ To learn how to implement Delivery Promise in your store, see the guide [Implementing Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-implementation). To understand this feature's operation, see the guide [Delivery Promise (Beta)](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview).
+
 ## Components
 
 Delivery Promise introduces a set of modular components and hooks. These are organized within the FastStore core and UI packages and are inserted into key sections. This guide focuses on the core components provided by the `@faststore/core` package, which are included by default in the FastStore source code, such as those found in the FastStore starter. Learn more about the packages in [Understanding the project structure](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson).
