update(overview.mdx): reorganizing DP docs

--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -1,15 +1,11 @@
 ---
-title: "Delivery Promise (Beta)"
+title: "Understanding Delivery Promise operation"
 updatedAt: "2025-09-03T15:35:51.192Z"
 ---
 
 >ℹ This feature is in closed beta, meaning only selected customers can access it. If you're interested in implementing it, please contact our [Support](https://support.vtex.com/hc/en-us) team.
 
-**Delivery Promise** is a feature that provides accurate and reliable delivery estimates for available products based on the customer's location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at a nearby location.
-
-This solution continuously updates product availability throughout the buying journey by responding to changes in catalog, pricing, inventory, or shipping settings. These updates are then sent to [Checkout](https://developers.vtex.com/docs/guides/checkout-overview) and [Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), ensuring customers see up-to-date options based on their region.
-
-This guide explains how the solution operates, covering:
+This guide explains how Delivery Promise operates, covering:
 
 * [Hooks](#hooks): Discover the hooks used to manage user location, fulfillment options, and Delivery Promise workflows.
 * [Filter options](#filter-options): Learn how shoppers can filter products by delivery or pickup methods.
