--- a/docs/faststore/components/features/delivery-promise/implementation.mdx
+++ b/docs/faststore/components/features/delivery-promise/implementation.mdx
@@ -11,7 +11,7 @@ This solution continuously updates product availability throughout the buying jo
 
 In this guide, you'll learn how to configure Delivery Promise in your FastStore project.
 
-To understand how Delivery Promise operates, see the guide [Understanding Delivery Promise operation](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview). To learn more about the Delivery Promise components, see the guide [Working with Delivery Promise components](https://developers.vtex.com/docs/guides/faststore/delivery-promise-components)
+>ℹ To understand how Delivery Promise operates, see the guide [Understanding Delivery Promise operation](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview). To learn more about the Delivery Promise components, see the guide [Working with Delivery Promise components](https://developers.vtex.com/docs/guides/faststore/delivery-promise-components).
 
 ## Default settings
 
